@@ -384,6 +384,7 @@
                 <div tal:condition="python: advice['delay'] and advice['delay_started_on']" class="discreet" style="text-align: right;">
                    <span i18n:translate="">Asked on <span i18n:name="advice_asked_on_date" tal:content="advice/delay_infos/delay_started_on_localized">2013/05/08</span></span>
                    <span tal:condition="python: advice['type'] != 'not_given' and not advice['hidden_during_redaction']"> - <span i18n:translate="">Given on <span i18n:name="advice_given_on_date" tal:content="advice/advice_given_on_localized">2013/05/08</span></span></span>
+                   <span> - <span i18n:translate="">Limit date <span i18n:name="advice_limit_date" tal:content="advice/delay_infos/limit_date_localized">2013/05/08</span></span></span>
                 </div>
                 </fieldset>
               </li>
